--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -8,34 +8,42 @@
     android:orientation="vertical"
     tools:context=".ContactUsActivity">
 
-    <ScrollView
+    <!--    <ScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent">-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/txthead"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:minHeight="70dp"
+            android:layout_marginBottom="@dimen/margin20"
+            android:scaleType="fitXY"
+            android:layout_gravity="center_horizontal"/>
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/txthead"
+                android:id="@+id/btnexit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin20"
-                android:text="Contact Us"
-                android:textColor="@color/black"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginHorizontal="@dimen/margin10"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:background="@color/purple_500"
+                android:padding="@dimen/margin5"
+                android:text="Back Home"/>
+        </RelativeLayout>
 
-            <TextView
-                android:id="@+id/txtbody"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin20"
-                android:text="Loading ..."
-                android:textColor="@color/black"
-                android:layout_gravity="center_horizontal"/>
-
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+    <!--    </ScrollView>-->
 
 </LinearLayout>
