--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,10 +5,10 @@
     android:layout_height="150dp">
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_launcher_foreground"/>
+        android:src="@drawable/tvbigicon"/>
 
 
 </RelativeLayout>
