--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,7 +4,9 @@
     <dimen name="margin1">1dp</dimen>
     <dimen name="margin2">2dp</dimen>
     <dimen name="margin3">3dp</dimen>
+    <dimen name="margin4">4dp</dimen>
     <dimen name="margin5">5dp</dimen>
+    <dimen name="margin8">8dp</dimen>
     <dimen name="margin10">10dp</dimen>
     <dimen name="margin15">15dp</dimen>
     <dimen name="margin20">20dp</dimen>
