--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -27,6 +27,21 @@
             android:layout_gravity="center_horizontal"/>
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/btnexit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginHorizontal="@dimen/margin10"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:background="@color/purple_500"
+                android:padding="@dimen/margin5"
+                android:text="Back Home"/>
+        </RelativeLayout>
 
     </LinearLayout>
     <!--    </ScrollView>-->
