--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -15,4 +15,9 @@
         android:id="@+id/nav_contact"
         android:title="Contact Us" />
 
+    <item
+        android:id="@+id/nav_close"
+        android:title="Close" />
+
+
 </menu>
